--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sebastiansulinski/laravel-currency",
-    "description": "Currency component for Laravel 5.",
+    "description": "Currency component for Laravel 5+",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "^5.2"
@@ -20,6 +20,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2"
+        "phpunit/phpunit": "^5.2",
+        "mockery/mockery": "^0.9.4"
     }
 }
