--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,11 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "SSD\\": "src",
-            "SSDTest\\": "tests"
+            "SSD\\": "src"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2",
+        "phpunit/phpunit": "^5.3",
         "mockery/mockery": "^0.9.4"
     }
 }
