--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "sebastiansulinski/laravel-currency",
     "description": "Currency component for Laravel 5+",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "^5.2"
+        "php": ">=5.5.9"
     },
     "license": "MIT",
     "authors": [
