--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "SSD\\": "src"
+            "SSD\\Currency\\": "src"
         }
     },
     "require-dev": {
