--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "sebastiansulinski/laravel-currency",
     "description": "Currency component for Laravel 5+",
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/http": "^5.2",
-        "illuminate/support": "^5.2"
+        "php": "^7.1",
+        "illuminate/http": "^5.5",
+        "illuminate/support": "^5.5"
     },
     "license": "MIT",
     "authors": [
@@ -20,12 +20,12 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/CurrencyTestCase.php"
-        ]
+        "psr-4": {
+            "SSDTest\\": "tests/"
+        }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3",
-        "mockery/mockery": "^0.9.4"
+        "phpunit/phpunit": "^6.4",
+        "mockery/mockery": "^1.0"
     }
 }
