Updated to laravel 9

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "sebastiansulinski/laravel-currency",
-    "description": "Currency component for Laravel 8+",
+    "description": "Currency component for Laravel 9+",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "illuminate/http": "^8.0",
-        "illuminate/support": "^8.0"
+        "php": "^8.0",
+        "illuminate/http": "^9.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
