--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "Currency component for Laravel 9+",
     "require": {
         "php": "^8.0",
-        "illuminate/http": "^9.0",
-        "illuminate/support": "^9.0"
+        "illuminate/http": "^9.0||^10.0",
+        "illuminate/support": "^9.0||^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^10.0",
         "mockery/mockery": "^1.4"
     },
     "license": "MIT",
