--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "sebastiansulinski/laravel-currency",
     "description": "Currency component for Laravel 9+",
     "require": {
-        "php": "^8.0",
-        "illuminate/http": "^9.0||^10.0",
-        "illuminate/support": "^9.0||^10.0"
+        "php": "^8.1",
+        "illuminate/http": "^10.0",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "mockery/mockery": "^1.4"
+        "mockery/mockery": "^1.4.4"
     },
     "license": "MIT",
     "authors": [
